--- a/css/main.scss
+++ b/css/main.scss
@@ -203,8 +203,85 @@ img {
                             }
                         }
                     }
+                }
+
+                // 005
+                .box_percent {
+                    display: block;
+                    padding: 15px;
+                    border-bottom: 1px solid rgba(255, 255, 255, 0.2);
+
+                    // 006
+                    .info {
+                        font-size: 16px;
+                        font-weight: normal;
+                        color: #ababab;
+                        margin-left: 0;
+
+                        // 007
+                        i {
+                            padding-right: 5px;
+                            display: inline-block;
+                            color: $mainColor;
+                            font-size: 20px;
+                            padding-bottom: 10px;
+
+                            @media (max-width: 400px) {
+                                text-align: center;
+                                display: block;
+                            }
+                        }
+
+                        // 007
+                        h3 {
+                            display: inline-block;
+                            font-size: 16px;
+                            font-weight: normal;
+                            color: #ababab;
+
+                            @media (max-width: 400px) {
+                                display: none;
+                            }
+                        }
+
+                        // 007
+                        li {
+                            position: relative;
+                            list-style: none;
+                            margin: 10px 0;
+                            cursor: pointer;
+
+                            // 002
+                            .text {
+                                color: #fff;
+                                font-weight: 300;
+                            }
+
+                            // 002
+                            .percent {
+                                margin-top: 5px;
+
+                                position: relative;
+                                height: 6px;
+                                background-color: #fff;
+                                border-radius: 6px;
+
+                                // 003
+                                span {
+                                    position: absolute;
+                                    top: 0;
+                                    left: 0;
+                                    height: 100%;
+                                    background-color: $mainColor;
+                                    border-radius: 6px;
+                                }
+                            }
+                        }
+                    }
 
                 }
+
+
             }
         }
 
@@ -283,70 +360,70 @@ img {
                             transform: scale(1.05);
                         }
 
-                        // =========(app)=========
-                        &:nth-child(1) .article__image {
-                            background-image: url(../images/app-todoList.png);
-                            // ==================
-                        }
-
-                        // =========(app)=========
-                        &:nth-child(2) .article__image {
-                            background-image: url(../images/app-ShoppingCart.png);
-                            // ==================
-                        }
-
-                        // =========(app)=========
-                        &:nth-child(3) .article__image {
-                            background-image: url(../images/app-slider.png);
-                            // ==================
-                        }
-
 
                         // =========(Car)=========
-                        &:nth-child(4) .article__image {
+                        &:nth-child(1) .article__image {
                             background-image: url(../images/pro-01.png);
                             // ==================
                         }
 
                         // =========(Food)=========
-                        &:nth-child(5) .article__image {
+                        &:nth-child(2) .article__image {
                             background-image: url(../images/pro-02.png);
                             // ==================
                         }
 
                         // =========(Flowers)=========
-                        &:nth-child(6) .article__image {
+                        &:nth-child(3) .article__image {
                             background-image: url(../images/pro-03.png);
                             // ==================
                         }
 
                         // =========(Coffee)=========
-                        &:nth-child(7) .article__image {
+                        &:nth-child(4) .article__image {
                             background-image: url(../images/pro-04.jpg);
                             // ==================
                         }
 
                         // =========(Book)=========
-                        &:nth-child(8) .article__image {
+                        &:nth-child(5) .article__image {
                             background-image: url(../images/pro-05.png);
                             // ==================
                         }
 
                         // =========(Hospital)=========
-                        &:nth-child(9) .article__image {
+                        &:nth-child(6) .article__image {
                             background-image: url(../images/pro-06.png);
                             // ==================
                         }
 
                         // =========(Shoes)=========
-                        &:nth-child(10) .article__image {
+                        &:nth-child(7) .article__image {
                             background-image: url(../images/pro-07.avif);
                             // ==================
                         }
 
                         // =========(Fitness)=========
-                        &:nth-child(11) .article__image {
+                        &:nth-child(8) .article__image {
                             background-image: url(../images/pro-08.png);
+                            // ==================
+                        }
+
+                        // =========(app todo)=========
+                        &:nth-child(9) .article__image {
+                            background-image: url(../images/app-todoList.png);
+                            // ==================
+                        }
+
+                        // =========(app Shopping Cart)=========
+                        &:nth-child(10) .article__image {
+                            background-image: url(../images/app-ShoppingCart.png);
+                            // ==================
+                        }
+
+                        // =========(app Slider)=========
+                        &:nth-child(11) .article__image {
+                            background-image: url(../images/app-slider.png);
                             // ==================
                         }
 
